--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "devDependencies": {
     "playwright": "^1.51.1"
+  },
+  "dependencies": {
+    "csv-parse": "^5.6.0"
   }
 }
